Fixed colors for menu items, by adding a missing shade of the default color and making sure that the labels are still readable when selected

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -134,10 +134,6 @@ body {
     /*background: var(--pri-theme-color) !important;*/
 /*}*/
 
-.avo-menu__item.selected > div > span {
-    color: white !important;
-}
-
 .avo-scrollable {
     overflow-y: auto;
 }
